human body done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Dermatologic",
         "hematopoietic",
         "Interventional",
+        "microbiome",
         "Omics",
         "otorhinolaryngologic",
         "Pharmacotherapies",
